--- a/restaurant.html
+++ b/restaurant.html
@@ -21,7 +21,7 @@
         </h1>
       </nav>
       <!-- Beginning breadcrumb -->
-      <ul id="breadcrumb">
+      <ul id="breadcrumb" role="navigation" aria-label="Breadcrumb">
         <li>
           <a href="index.html">Home</a>
         </li>
@@ -40,7 +40,7 @@
       <!-- End map -->
       <!-- Beginning restaurant -->
       <section id="restaurant-container">
-        <h1 id="restaurant-name"></h1>
+        <h2 id="restaurant-name"></h2>
         <img id="restaurant-img">
         <p id="restaurant-cuisine"></p>
         <address id="restaurant-address"></address>
